fix grid, image, and letter spacing

--- a/tp12/styles.css
+++ b/tp12/styles.css
@@ -58,7 +58,7 @@ main {
     left: 1rem;
 }
 
-#currentHumidty {
+#currentHumidity {
     position: relative;
     grid-area: currentHum;
     background-color: bisque;
